@startuml
' AuthService_component.puml (가이드 준수)

package "Interface Layer" {
  interface IAuthServiceApi
  interface IAuthManagementApi
  
  component AuthServiceApiImpl
  component AuthManagementApiImpl
  
  ' API implementations
  IAuthServiceApi -- AuthServiceApiImpl
  IAuthManagementApi -- AuthManagementApiImpl
}

package "Business Layer" {
  interface IAuthenticationService
  interface IAuthorizationService
  interface IUserRegistrationService
  interface IAuthEventConsumer
  
  component AuthenticationManager
  component AuthorizationManager
  component UserRegistrationManager
  component AuthEventConsumer
  
  ' Service implementations
  IAuthenticationService -- AuthenticationManager
  IAuthorizationService -- AuthorizationManager
  IUserRegistrationService -- UserRegistrationManager
  IAuthEventConsumer -- AuthEventConsumer
  
  ' Business layer internal relationships
  AuthenticationManager ..( IAuthorizationService : <<use>>
  UserRegistrationManager ..( IAuthenticationService : <<use>>
}

package "System Interface Layer" {
  interface IAuthRepository
  interface IMessagePublisherService
  interface IMessageSubscriptionService
  interface ITokenService
  interface ICreditCardVerificationService
  
  component AuthRepositoryImpl
  component MessageBrokerComponent
  component JwtTokenServiceImpl
  component CreditCardVerificationClient
  database AuthDatabase
  
  ' System interface implementations
  IAuthRepository -- AuthRepositoryImpl
  IMessagePublisherService -- MessageBrokerComponent
  IMessageSubscriptionService -- MessageBrokerComponent
  ITokenService -- JwtTokenServiceImpl
  ICreditCardVerificationService -- CreditCardVerificationClient
  
  ' System dependencies
  AuthRepositoryImpl ..( AuthDatabase
  MessageBrokerComponent ..( IAuthEventConsumer : <<IDomainEvent>>
}

' 패키지 외부 연결
' Interface Layer -> Business Layer
AuthServiceApiImpl ..( IAuthenticationService : <<use>>
AuthServiceApiImpl ..( IAuthorizationService : <<use>>
AuthManagementApiImpl ..( IUserRegistrationService : <<use>>

' Business Layer -> Message Broker 연결
AuthenticationManager ..( IMessagePublisherService : <<publish>>
AuthorizationManager ..( IMessagePublisherService : <<publish>>
UserRegistrationManager ..( IMessagePublisherService : <<publish>>
AuthEventConsumer ..( IMessageSubscriptionService : <<subscribe>>

' Business Layer -> System Interface Layer
AuthenticationManager ..( IAuthRepository : <<persist>>
AuthenticationManager ..( ITokenService : <<use>>
AuthenticationManager ..( ICreditCardVerificationService : <<HTTP>>
AuthorizationManager ..( IAuthRepository : <<persist>>
UserRegistrationManager ..( IAuthRepository : <<persist>>
AuthEventConsumer ..( IAuthRepository : <<persist>>

legend right
  Auth Service structure
  - Authentication and authorization services
  - User registration and management
  - Token-based security with JWT
  - Event-driven updates for auth state changes
end legend

@enduml
